@@ -12,9 +12,9 @@ generated by GNU Autoconf 2.68.  Invocation command line was
 
 hostname = tom
 uname -m = i686
-uname -r = 3.4.2-1.fc16.i686.PAE
+uname -r = 3.4.7-1.fc16.i686.PAE
 uname -s = Linux
-uname -v = #1 SMP Thu Jun 14 20:53:38 UTC 2012
+uname -v = #1 SMP Mon Jul 30 16:45:15 UTC 2012
 
 /usr/bin/uname -p = unknown
 /bin/uname -X     = unknown
