@@ -1,3 +1,6 @@
+2013-06-19 Tom Wu <wuxilong777@163.com>
+fix popup two same chat window issue.
+
 2012-05-25  Tom Wu  <wuxilong777@163.com>
 
         * First version
